Added my hobbies and extracurriculars

--- a/index.html
+++ b/index.html
@@ -120,17 +120,17 @@
 
                         <h3 align="middle">Extracurriculars</h3>
                         <ul class="custom-bullet">
-                            <li style="font-family: 'Calibri'; font-size: 18px">Been Graphic Designer for an International Dental Conference.</li>
-                            <li style="font-family: 'Calibri'; font-size: 18px">Romance & Fiction Blogger at WordPress.</li>
-                            <li style="font-family: 'Calibri'; font-size: 18px">Been Photographer in a startup called KreatiVision Photography.</li>
+                            <li style="font-family: 'Calibri'; font-size: 18px">Represented university in SAU-FEST 2016 held at Lucknow.</li>
+                            <li style="font-family: 'Calibri'; font-size: 18px">Participated in Youth-Vibe Football Tournament at university.</li>
+                            <li style="font-family: 'Calibri'; font-size: 18px">Participated in group singing and dancing in One-World celebration at university.</li>
                         </ul>
 
                         <h3 align="middle">Hobbies</h3>
                         <ul class="custom-bullet">
-                            <li style="font-family: 'Calibri'; font-size: 18px">Photography</li>
-                            <li style="font-family: 'Calibri'; font-size: 18px">Photo Editing</li>
-                            <li style="font-family: 'Calibri'; font-size: 18px"><b>Graphic Designing</b> - Adobe Photoshop</li>
-                            <li style="font-family: 'Calibri'; font-size: 18px"><b>Music Lover</b> - Indian Classical, Fusion, Modern Synth.</li>
+                            <li style="font-family: 'Calibri'; font-size: 18px">Playing Guitar</li>
+                            <li style="font-family: 'Calibri'; font-size: 18px">Playing Football</li>
+                            <li style="font-family: 'Calibri'; font-size: 18px">Video and Photo Editing</li>
+                            <li style="font-family: 'Calibri'; font-size: 18px">Reading Books</li>
                         </ul>
                         
 
@@ -199,7 +199,7 @@
                         <div align="middle">
                             <dl>
                                 <dt><img src="./images/loc.png" width="25px" height="25px"></dt>
-                                <dd class="text-primary" style="font-family: 'Calibri'; font-size: 18px">H. No - 299, Naya Basti,<br>Clement Town, Dehradun, 248002.</dd><br><br>
+                                <dd class="text-primary" style="font-family: 'Calibri'; font-size: 18px">Naya Basti,<br>Clement Town, Dehradun, 248002.</dd><br><br>
                                 <dt><img src="./images/phone.png" width="25px" height="25px"></dt>
                                 <dd><p class="text-primary" style="font-family: 'Calibri'; font-size: 18px">+91-9915119540</p></dd><br><br>
                                 <dt><img src="./images/mail.png" width="25px" height="25px"></dt>
