Minor changes updated

--- a/index.html
+++ b/index.html
@@ -118,14 +118,14 @@
                             </tr>
                         </tbody></table>
 
-                        <h3 align="middle">Extracurriculars</h3>
+                        <br><h3 align="middle">Extracurriculars</h3>
                         <ul class="custom-bullet">
                             <li style="font-family: 'Calibri'; font-size: 18px">Represented university in SAU-FEST 2016 held at Lucknow.</li>
                             <li style="font-family: 'Calibri'; font-size: 18px">Participated in Youth-Vibe Football Tournament at university.</li>
                             <li style="font-family: 'Calibri'; font-size: 18px">Participated in group singing and dancing in One-World celebration at university.</li>
                         </ul>
 
-                        <h3 align="middle">Hobbies</h3>
+                        <br><h3 align="middle">Hobbies</h3>
                         <ul class="custom-bullet">
                             <li style="font-family: 'Calibri'; font-size: 18px">Playing Guitar</li>
                             <li style="font-family: 'Calibri'; font-size: 18px">Playing Football</li>
