--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
                             Bikash Gurung
                         </div>
                         <div class="profile-usertitle-job">
-                            Emerging Full Stack Developer
+                            Emerging Software Developer
                         </div>
                     </div>
                     <!-- END SIDEBAR USER TITLE -->
@@ -103,7 +103,7 @@
                             </thead>
                             <tbody><tr>
                                 <td style="font-family: 'Calibri'; font-size: 18px"><b><i class="glyphicon glyphicon-chevron-right"></i>Bachelor of Technology</b></td>
-                                <td style="font-family: 'Calibri'; font-size: 18px">Lovely Professional University, <br>Punjab</td>
+                                <td style="font-family: 'Calibri'; font-size: 18px">Lovely Professional University</td>
                                 <td style="font-family: 'Calibri'; font-size: 18px">7.47</td>
                             </tr>
                             <tr>
