updated social media icons problem

--- a/index.html
+++ b/index.html
@@ -62,18 +62,6 @@
                             </li> 
                         </ul>
                     </div>
-                    <!-- Social Media Icons -->
-                    <div class="media-icons"> 
-                        <div class="col-md-4"><br>
-                            <a href="https://www.linkedin.com/in/bikash-g-830527112/" target="_blank" class="btn fa fa-linkedin"></a>       
-                        </div>
-                        <div class="col-md-4"><br>
-                            <a href="https://www.instagram.com/goodtimebrothers/?hl=en" target="_blank" class="btn fa fa-instagram"></a>       
-                        </div>
-                        <div class="col-md-4"><br>
-                            <a href="https://twitter.com/gurung_bucky" target="_blank" class="btn fa fa-twitter"></a>       
-                        </div>
-                    </div>
                     <!-- END MENU -->
                 </div>
             </div>
@@ -89,7 +77,7 @@
                         <h1 class="text-primary" style="font-family: 'Calibri'">Overview<br></h1>
                         <blockquote class="blockquote">
                             <p class="text-primary" style="font-family: 'Calibri'"><b>Hi there,</b></p>
-                            <p class="text-primary" style="font-family: 'Calibri'">I am Bikash Gurung, a final year Computer Science student.
+                            <p class="text-primary" style="font-family: 'Calibri'">I am Bikash Gurung, a final year Computer Science student. I've done 4 months of internship as an <b>Programmer Analyst Trainee at Cognizant.</b>
                             </p>
                             <p class="text-basic" style="font-family: 'Calibri'">Elegance in solving a problem is my sole motto while approaching a problem. I prefer learning by trial, rather than trying to grasp all-at-once. I also enjoy editing videos.
                             </p>
@@ -299,16 +287,34 @@
                     <li style="font-family: 'Calibri'; font-size: 18px">Takes input of marks and convert it into CGPA with the help of formula</li>
                 </ul><br>
 			         
-                        <div class="progress1">
-                            <div class="progress-bar" role="progressbar" style="width: 100%" aria-valuenow="100" aria-valuemin="0" aria-valuemax="100"></div>
+                    <div class="progress1">
+                        <div class="progress-bar" role="progressbar" style="width: 100%" aria-valuenow="100" aria-valuemin="0" aria-valuemax="100"></div>
+                    </div>
+                    <h1 class="text-primary" style="font-family: 'Calibri'"><a name="contact"></a>Contact<br><small>Reach out to me!</small></h1>
+
+                        <div class="contactDetails" align="middle">
+                        <!-- Social Media Icons -->
+                        <img src="./images/letsconnect.png" width="150px" height="30px">
+                        <div class="media-icons"> 
+                            <div class="col-md-3"><br>
+                                <a href="https://www.linkedin.com/in/bikash-g-830527112/" target="_blank" class="btn fa fa-linkedin"></a>       
+                            </div>
+                            <div class="col-md-3"><br>
+                                <a href="https://github.com/Bikashgrg" target="_blank" class="btn fa fa-github"></a>       
+                            </div>
+                            <div class="col-md-3"><br>
+                                <a href="https://www.instagram.com/goodtimebrothers/?hl=en" target="_blank" class="btn fa fa-instagram"></a>       
+                            </div>
+                            <div class="col-md-3"><br>
+                                <a href="https://twitter.com/gurung_bucky" target="_blank" class="btn fa fa-twitter"></a>       
+                            </div>
                         </div>
-                        <h1 class="text-primary" style="font-family: 'Calibri'"><a name="contact"></a>Contact<br><small>Reach out to me!</small></h1><br>
-                        <div align="middle">
+                        <br><br><br>
                             <dl>
-                                <dt><img src="./images/loc.png" width="25px" height="25px"></dt>
-                                <dd class="text-primary" style="font-family: 'Calibri'; font-size: 18px">Naya Basti, Clement Town<br>Dehradun, India, 248002.</dd><br><br>
+                                <dt><br><img src="./images/loc.png" width="25px" height="25px"></dt>
+                                <dd class="text-primary" style="font-family: 'Calibri'; font-size: 18px">Naya Basti, Clement Town<br>Dehradun, India, 248002.</dd><br>
                                 <dt><img src="./images/phone.png" width="25px" height="25px"></dt>
-                                <dd><p class="text-primary" style="font-family: 'Calibri'; font-size: 18px">+91-9915119540</p></dd><br><br>
+                                <dd><p class="text-primary" style="font-family: 'Calibri'; font-size: 18px">+91-9915119540</p></dd><br>
                                 <dt><img src="./images/email.png" width="25px" height="25px"></dt>
                                 <dd><p class="text-primary" style="font-family: 'Calibri'; font-size: 18px">
                                     <b>bikash.grg2222@gmail.com</b> </p></dd>
