--- a/index.html
+++ b/index.html
@@ -7,7 +7,6 @@
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/css/bootstrap.min.css">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
   <link rel="stylesheet" href="./style/style.css" type="text/css">
-  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
 </head>
 
 <body>
@@ -77,7 +76,7 @@
                         <h1 class="text-primary" style="font-family: 'Calibri'">Overview<br></h1>
                         <blockquote class="blockquote">
                             <p class="text-primary" style="font-family: 'Calibri'"><b>Hi there,</b></p>
-                            <p class="text-primary" style="font-family: 'Calibri'">I am Bikash Gurung, a final year Computer Science student. I've done 4 months of internship as an <b>Programmer Analyst Trainee at Cognizant.</b>
+                            <p class="text-primary" style="font-family: 'Calibri'">I am Bikash Gurung, a Computer Science student. I've done 4 months of internship as an <b>Programmer Analyst Trainee at Cognizant.</b>
                             </p>
                             <p class="text-basic" style="font-family: 'Calibri'">Elegance in solving a problem is my sole motto while approaching a problem. I prefer learning by trial, rather than trying to grasp all-at-once. I also enjoy editing videos.
                             </p>
@@ -91,8 +90,8 @@
                         <br>
 
                         <div class="row col-container" width="80%"> 
-                            <div class="col-md-3 col-sm-6">
-                                <div class="thumbnail">
+                            <div class="col-xs-6 col-md-3">
+                                <div class="thumbnail" >
                                     <img src="./images/java.png">
                                 </div>
                                 <div class="caption">
@@ -105,7 +104,7 @@
                                 </div>
                             </div>
 
-                            <div class="col-md-3 col-sm-6">
+                            <div class="col-xs-6 col-md-3">
                                 <div class="thumbnail">
                                     <img src="./images/js.png">
                                 </div>
@@ -119,7 +118,7 @@
                                 </div>
                             </div>
 
-                            <div class="col-md-3 col-sm-6">
+                            <div class="col-xs-6 col-md-3">
                                 <div class="thumbnail">
                                     <img src="./images/node.png">
                                 </div>
@@ -133,7 +132,7 @@
                                 </div>
                             </div>
 
-                            <div class="col-md-3 col-sm-6">
+                            <div class="col-xs-6 col-md-3">
                                 <div class="thumbnail">
                                     <img src="./images/html.png">
                                 </div>
@@ -147,7 +146,7 @@
                                 </div>
                             </div>
 
-                            <div class="col-md-3 col-sm-6">
+                            <div class="col-xs-6 col-md-3">
                                 <div class="thumbnail">
                                     <img src="./images/css3.png">
                                 </div>
@@ -161,7 +160,7 @@
                                 </div>
                             </div>
 
-                            <div class="col-md-3 col-sm-6">
+                            <div class="col-xs-6 col-md-3">
                                 <div class="thumbnail">
                                     <img src="./images/bootstrap.png">
                                 </div>
@@ -175,7 +174,7 @@
                                 </div>
                             </div>
 
-                            <div class="col-md-3 col-sm-6">
+                            <div class="col-xs-6 col-md-3">
                                 <div class="thumbnail">
                                     <img src="./images/sql.png">
                                 </div>
@@ -189,7 +188,7 @@
                                 </div>
                             </div>
 
-                            <div class="col-md-3 col-sm-6">
+                            <div class="col-xs-6 col-md-3">
                                 <div class="thumbnail">
                                     <img src="./images/mdb.png">
                                 </div>
@@ -203,7 +202,7 @@
                                 </div>
                             </div>
 
-                            <div class="col-md-3 col-sm-6">
+                            <div class="col-xs-6 col-md-3">
                                 <div class="thumbnail">
                                     <img src="./images/android.png">
                                 </div>
@@ -217,7 +216,7 @@
                                 </div>
                             </div>
 
-                            <div class="col-md-3 col-sm-6">
+                            <div class="col-xs-6 col-md-3">
                                 <div class="thumbnail">
                                     <img src="./images/git.png">
                                 </div>
@@ -231,7 +230,7 @@
                                 </div>
                             </div>
 
-                            <div class="col-md-3 col-sm-6">
+                            <div class="col-xs-6 col-md-3">
                                 <div class="thumbnail">
                                     <img src="./images/wordpress.jpg">
                                 </div>
@@ -276,7 +275,7 @@
                     <li style="font-family: 'Calibri'; font-size: 18px">Inserted various music playlist for different mood from soundcloud</li>
                     <li style="font-family: 'Calibri'; font-size: 18px">Uses Intents, Toast, Alert Dialog, Adapter etc for making it more functional</li>
                 </ul>
-                <a class="btn btn-primary center-block">See Project On GitHub</a> 
+                <a href="https://github.com/Bikashgrg" target="_blank" class="btn btn-primary center-block">See Project On GitHub</a> 
 			    <br>
 			    
 			    <h2 align="middle">CGPA Calculator<br><small><i>calculator for students to get their CGPA</i></small></h2>   
@@ -285,7 +284,9 @@
                     <li style="font-family: 'Calibri'; font-size: 18px">Ask users to select their course and subjects</li>
                     <li style="font-family: 'Calibri'; font-size: 18px">Tell students their grade of each subjects  </li>
                     <li style="font-family: 'Calibri'; font-size: 18px">Takes input of marks and convert it into CGPA with the help of formula</li>
-                </ul><br>
+                </ul>
+                <a href="https://github.com/Bikashgrg" target="_blank" class="btn btn-primary center-block">See Project On GitHub</a>
+                <br>
 			         
                     <div class="progress1">
                         <div class="progress-bar" role="progressbar" style="width: 100%" aria-valuenow="100" aria-valuemin="0" aria-valuemax="100"></div>
