--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
                             <p class="text-primary" style="font-family: 'Calibri'"><b>Hi there,</b></p>
                             <p class="text-primary" style="font-family: 'Calibri'">I am Bikash Gurung, a Computer Science student. Currently I'm working as a Management Trainee at Aspiring Minds, an SHL company. I've done 4 months of internship as an <b>Programmer Analyst Trainee at Cognizant.</b>
                             </p>
-                            <p class="text-basic" style="font-family: 'Calibri'">Elegance in solving a problem is my sole motto while approaching a problem. I prefer learning by trial, rather than trying to grasp all-at-once. I also enjoy editing videos.
+                            <p class="text-basic" style="font-family: 'Calibri'">Elegance in solving a problem is my sole motto while approaching a problem. I prefer learning by trial, rather than trying to grasp all-at-once. I enjoy playing football, guitar and reading books.
                             </p>
                         </blockquote>
 
