--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
                         <h1 class="text-primary" style="font-family: 'Calibri'">Overview<br></h1>
                         <blockquote class="blockquote">
                             <p class="text-primary" style="font-family: 'Calibri'"><b>Hi there,</b></p>
-                            <p class="text-primary" style="font-family: 'Calibri'">I am Bikash Gurung, a Computer Science student. Currently I'm working as a Management Trainee at Aspiring Minds, an SHL company. I've done 4 months of internship as an <b>Programmer Analyst Trainee at Cognizant.</b>
+                            <p class="text-primary" style="font-family: 'Calibri'">I am Bikash Gurung, a Computer Science graduate. Currently I'm working as a Management Trainee at Aspiring Minds, an SHL company. I've done 4 months of internship as an <b>Programmer Analyst Trainee at Cognizant.</b>
                             </p>
                             <p class="text-basic" style="font-family: 'Calibri'">Elegance in solving a problem is my sole motto while approaching a problem. I prefer learning by trial, rather than trying to grasp all-at-once. I enjoy playing football, guitar and reading books.
                             </p>
