--- a/index.html
+++ b/index.html
@@ -299,9 +299,9 @@
                         <br><br><br>
                             <dl>
                                 <dt><br><img src="./images/loc.png" width="25px" height="25px"></dt>
-                                <dd class="text-primary" style="font-family: 'Calibri'; font-size: 18px">Naya Basti, Clement Town<br>Dehradun, India, 248002.</dd><br>
+                                <dd class="text-primary" style="font-family: 'Calibri'; font-size: 18px">Lekhnath, Pokhara, Nepal</dd><br>
                                 <dt><img src="./images/phone.png" width="25px" height="25px"></dt>
-                                <dd><p class="text-primary" style="font-family: 'Calibri'; font-size: 18px">+91-9915119540</p></dd><br>
+                                <dd><p class="text-primary" style="font-family: 'Calibri'; font-size: 18px">+977-9817119087</p></dd><br>
                                 <dt><img src="./images/email.png" width="25px" height="25px"></dt>
                                 <dd><p class="text-primary" style="font-family: 'Calibri'; font-size: 18px">
                                     <b>bikash.grg2222@gmail.com</b> </p></dd>
