Updated as per UK address and details

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
                             Bikash Gurung
                         </div>
                         <div class="profile-usertitle-job">
-                            Full Stack Developer<br>
+                            Full Time Student<br>
                         </div>
                     </div>
                     <!-- END SIDEBAR USER TITLE -->
@@ -76,7 +76,7 @@
                         <h1 class="text-primary" style="font-family: 'Calibri'">Overview<br></h1>
                         <blockquote class="blockquote">
                             <p class="text-primary" style="font-family: 'Calibri'"><b>Hi there,</b></p>
-                            <p class="text-primary" style="font-family: 'Calibri'">I am Bikash Gurung, a Computer Science graduate. Currently I'm going to pursue master's degree in artificial intelligence (machine learning) from Liverpool John Moores University. I've worked as a <b>Management Trainee at Aspiring Minds, an SHL company</b> from Sep 2019 to Apr 2021 and also previous to that I've done 4 months of internship as an <b>Programmer Analyst Trainee at Cognizant.</b>
+                            <p class="text-primary" style="font-family: 'Calibri'">I am Bikash Gurung, a Computer Science graduate. Currently pursuing master's degree in artificial intelligence (machine learning) from Liverpool John Moores University. I've worked as a <b>Management Trainee at Aspiring Minds, an SHL company</b> from Sep 2019 to Apr 2021 and also previous to that I've done 4 months of internship as an <b>Programmer Analyst Trainee at Cognizant.</b>
                             </p>
                             <p class="text-basic" style="font-family: 'Calibri'">Elegance in solving a problem is my sole motto while approaching a problem. I prefer learning by trial, rather than trying to grasp all-at-once. I enjoy playing football, guitar and reading books.
                             </p>
@@ -299,12 +299,12 @@
                         <br><br><br>
                             <dl>
                                 <dt><br><img src="./images/loc.png" width="25px" height="25px"></dt>
-                                <dd class="text-primary" style="font-family: 'Calibri'; font-size: 18px">Lekhnath, Pokhara, Nepal</dd><br>
+                                <dd class="text-primary" style="font-family: 'Calibri'; font-size: 18px">St Andrews Gardens, Liverpool, L3 5XA, United Kingdom</dd><br>
                                 <dt><img src="./images/phone.png" width="25px" height="25px"></dt>
-                                <dd><p class="text-primary" style="font-family: 'Calibri'; font-size: 18px">+977-9817119087</p></dd><br>
+                                <dd><p class="text-primary" style="font-family: 'Calibri'; font-size: 18px">+44-7436598867</p></dd><br>
                                 <dt><img src="./images/email.png" width="25px" height="25px"></dt>
                                 <dd><p class="text-primary" style="font-family: 'Calibri'; font-size: 18px">
-                                    <b>bikash.grg2222@gmail.com</b> </p></dd>
+                                    <b>bikash.grg.uk@gmail.com</b> </p></dd>
                             </dl>
                         </div>                       
                     </div>
