Updated project section

--- a/index.html
+++ b/index.html
@@ -145,8 +145,8 @@
 			    
 			    <h2 align="middle">Higgs boson detection using Accelerated Machine Learning</h2><hr>
 			    <ul class="custom-bullet">
-                    <li style="font-family: 'Calibri'; font-size: 18px">On the basis of the HIGGS dataset, the Random Forest (RF) model and XGBoost (for comparison) were used to train datasets for classifying Higgs boson signal from background signal.</li>
-                    <li style="font-family: 'Calibri'; font-size: 18px">Furthermore, a comparison has been done to determine how well each model performs on the CPU and GPU ( used RAPIDS on Nvidia RTX 3090).</li>
+                    <li style="font-family: 'Calibri'; font-size: 18px">On the basis of the HIGGS dataset, the Random Forest (RF) model and XGBoost (for comparison) were used to train datasets for classifying Higgs boson signal from background signal using RAPIDS accelerated framework.</li>
+                    <li style="font-family: 'Calibri'; font-size: 18px">Furthermore, a comparison has been done to determine how well each model performs on the CPU and GPU (used RAPIDS on Nvidia RTX 3090).</li>
                     <li style="font-family: 'Calibri'; font-size: 18px">In the RF and XGBoost models, the GPU is over 177 times and 300 times quicker than the CPU, respectively, allowing for significant time savings that can be leveraged to improve the model.</li>
                     <li style="font-family: 'Calibri'; font-size: 18px">In terms of accuracy, the CPU performed slightly better than the GPU in both models when the same parameter was utilized.</li>
                 </ul>
