Updated link and remove link

--- a/index.html
+++ b/index.html
@@ -172,14 +172,12 @@
                         <img src="./images/letsconnect.png" width="150px" height="30px">
                         <div class="media-icons"> 
                             <div class="col-md-4"><br>
-                                <a href="https://www.linkedin.com/in/bikash-g-830527112/" target="_blank" class="btn fa fa-linkedin"></a>       
+                                <a href="https://www.linkedin.com/in/bikash-grg/" target="_blank" class="btn fa fa-linkedin"></a>       
                             </div>
                             <div class="col-md-4"><br>
                                 <a href="https://github.com/Bikashgrg" target="_blank" class="btn fa fa-github"></a>       
                             </div>
-                            <div class="col-md-4"><br>
-                                <a href="https://twitter.com/gurung_bucky" target="_blank" class="btn fa fa-twitter"></a>       
-                            </div>
+                        
                         </div>
                         <br><br><br>
                             <dl><br>
