--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
                         <h1 class="text-primary" style="font-family: 'Calibri'">Overview<br></h1>
                         <blockquote class="blockquote">
                             <p class="text-primary" style="font-family: 'Calibri'"><b>Hi there,</b></p>
-                            <p class="text-primary" style="font-family: 'Calibri'">I am Bikash Gurung, a Computer Science graduate. Currently pursuing Master's degree in Artificial Intelligence (Machine Learning) from Liverpool John Moores University. I've worked as a <b>Management Trainee at Aspiring Minds, an SHL company</b> from Sep 2019 to Apr 2021 and also previous to that I've done 4 months of internship as an <b>Programmer Analyst Trainee at Cognizant.</b>
+                            <p class="text-primary" style="font-family: 'Calibri'">I am Bikash Gurung. Recently completed my MSc degree in Artificial Intelligence (Machine Learning) from Liverpool John Moores University with distinction. I've worked as a <b>Management Trainee at Aspiring Minds, an SHL company</b> from Sep 2019 to Apr 2021 and also previous to that I've done 4 months of internship as an <b>Programmer Analyst Trainee at Cognizant.</b>
                             </p>
                             <p class="text-basic" style="font-family: 'Calibri'">Elegance in solving a problem is my sole motto while approaching a problem. I prefer learning by trial, rather than trying to grasp all-at-once. I enjoy playing football, guitar and reading books.
                             </p>
