--- a/index.html
+++ b/index.html
@@ -76,7 +76,9 @@
                         <h1 class="text-primary" style="font-family: 'Calibri'">Overview<br></h1>
                         <blockquote class="blockquote">
                             <p class="text-primary" style="font-family: 'Calibri'"><b>Hi there,</b></p>
-                            <p class="text-primary" style="font-family: 'Calibri'">I am Bikash Gurung. Recently completed my MSc degree in Artificial Intelligence (Machine Learning) from Liverpool John Moores University with distinction. I've worked as a <b>Management Trainee at Aspiring Minds, an SHL company</b> from Sep 2019 to Apr 2021 and also previous to that I've done 4 months of internship as an <b>Programmer Analyst Trainee at Cognizant.</b>
+                            <p class="text-primary" style="font-family: 'Calibri'">I am Bikash Gurung. Recently completed my MSc degree in Artificial Intelligence (Machine Learning) from Liverpool John Moores University with distinction. With a strong background in artificial intelligence and programming, and a passion for using data to solve complex problems, I am confident that I would be a valuable asset to your team. 
+				    I've worked professionaly for almost 2 years as a <b>Management Trainee at SHL</b> from Sep 2019 to Apr 2021 and also previous to that I've done 4 months of internship as an <b>Programmer Analyst Trainee at Cognizant.</b><br/>
+				    In addition to my technical skills, I am an excellent communicator and thrive in collaborative and agile environments. I have a proven track record of working effectively with cross-functional teams and can work independently to drive projects forward. 
                             </p>
                             <p class="text-basic" style="font-family: 'Calibri'">Elegance in solving a problem is my sole motto while approaching a problem. I prefer learning by trial, rather than trying to grasp all-at-once. I enjoy playing football, guitar and reading books.
                             </p>
