updating image extension

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
                 <div class="profile-sidebar well">
                     <!-- SIDEBAR USERPIC -->
                     <div class="profile-userpic">
-                        <img src="./images/profile.jpg" class="img-responsive" alt="image contains profile picture">
+                        <img src="./images/profile.JPG" class="img-responsive" alt="image contains profile picture">
                     </div>
                     <!-- END SIDEBAR USERPIC -->
                     <!-- SIDEBAR USER TITLE -->
