--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
                             Bikash Gurung
                         </div>
                         <div class="profile-usertitle-job">
-                            Student<br>
+                            AI/ML Learner<br>
                         </div>
                     </div>
                     <!-- END SIDEBAR USER TITLE -->
@@ -76,10 +76,10 @@
                         <h1 class="text-primary style="font-family: 'Calibri'">Overview<br></h1>
                         <blockquote class="blockquote">
                             <p class="text-basic" style="font-family: 'Calibri'"><b>Hi there,</b></p>
-                            <p class="text-basic" style="font-family: 'Calibri'">I am Bikash Gurung. With a strong background in AI and programming, along with a passion for using data to solve complex problems, 
-				    I have experience in developing machine learning models. With over two years of professional experience, including a programmer analyst trainee internship, 
-				    I have a proven track record of working effectively with cross-functional teams and can work independently to drive projects forward. 
-				    In addition to my technical skills, I excel at communication, critical thinking and thrive in collaborative and agile environments.
+                            <p class="text-basic" style="font-family: 'Calibri'">Accomplished AI and Computer Science specialist, graduating with distinction from Liverpool John Moores University and holding a strong B. Tech in Computer Science from Lovely Professional University. Specialized in Machine Learning and Deep Learning, 
+				    I bring a blend of academic excellence and practical experience. My expertise spans from developing advanced ML models and DL applications to executing intricate EDA/ETL and statistical analysis. With over two years of professional experience, including a programmer analyst trainee internship, 
+				    I have a proven track record of working effectively with cross-functional teams to deliver high-quality solutions. 
+				    My goal is to bring exceptional value to the team, overcoming any barriers with a portfolio that stands out, and showcasing my commitment and capabilities in AI and data science.
                             </p>
                         
                         </blockquote>
